# ur_manipulation

./: .gitignore  CMakeLists.txt  README.md  package.xml  ur.rosinstall
config/: prbt.yaml  ur5e.yaml
include/ur_manipulation/: endurance_test_logger.hpp  moveit_custom_api.hpp  seher_demo.h
launch/: benchmark_mqtt.launch  endurance_demo.launch  gazebo_ur5e_egp50.launch  learning.launch  move_group_interface_tutorial.launch  pick_n_place.launch  seher_demo.launch  ur5e_bringup.launch  ur5e_egp50_upload.launch  ur5e_upload.launch  view_robot.rviz  view_ur5e_egp50.launch
meshes/: EGP50.dae  EGP50.stl  readme-and-terms-of-use-3d-cad-models.txt
scripts/: EXAMPLE.py  tool_pose_publisher.py
src/: benchmark_mqtt.cpp  endurance_demo.cpp  endurance_test_logger.cpp  learning.cpp  move_group_interface_tutorial_ur.cpp  moveit_custom_api.cpp  pick_n_place.cpp  seher_demo.cpp
urdf/: egp50.urdf.xacro  ur5e_joint_limited_robot_egp50.urdf.xacro  ur5e_robot_egp50.urdf.xacro
